CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
SET(CMAKE_C_FLAGS_RELEASE "-Wall -O2")
SET(CMAKE_C_FLAGS_DEBUG "-g")
SET(CMAKE_BUILD_TYPE Release)

# プロジェクト名
PROJECT(unarray C)
SET(serial "1.0.0")
SET(soserial "1")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")
# ライブラリ
ADD_LIBRARY(unarray SHARED unarray.c)
SET_TARGET_PROPERTIES(unarray PROPERTIES VERSION ${serial} SOVERSION ${soserial})
INSTALL(TARGETS unarray LIBRARY DESTINATION lib)
INSTALL(FILES unarray.h DESTINATION include)

